# claude-deck

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
docs/: CAPTURE_CHECKLIST.md  MVP-SPEC.md  PERMISSION-HUB-V2-PLAN.md  PHASES.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/permissions/: claude_policy.rs  global_settings.rs  mod.rs  safe_bash.rs  server.rs  settings.rs
src-tauri/src/process/: events.rs  pool.rs
src-tauri/src/session/: discovery.rs  mod.rs  types.rs
src/components/chat/: ChatView.tsx  MessageBubble.tsx  ToolCallCard.tsx
src/components/input/: InputBar.tsx
src/components/permissions/: PermissionCenter.tsx  PermissionOverlay.tsx
src/components/shared/: StatusDot.tsx
src/components/sidebar/: SessionList.tsx  Sidebar.tsx
src/hooks/: useHealthPoll.ts  usePermissionEvents.ts  useSessionEvents.ts
src/lib/: format.ts  tauri.ts
src/stores/: appStore.ts
src/styles/: index.css
src/types/: index.ts
