[package]
name = "agent-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "agent-hub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "time", "net", "macros"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
regex = "1"
